Fix resources loading